--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "zevitagem/lego-auth",
     "type": "library",
+    "version": "1.0.0",
     "description": "Authentication Manager to any PHP application",
     "keywords": ["authentication", "lego", "auth"],
     "homepage": "https://github.com/zevitagem/lego-auth",
@@ -14,7 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=7.4.*"
+        "guzzlehttp/guzzle": "^7.0"
     },
     "autoload": {
         "psr-4": {
